# pokemon-mcp-server

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  open-neo4j.html  setup.ps1  setup.sh
data/: biographies.json
servers/biography-server/: main.py  pyproject.toml
servers/biography-server/src/: Dockerfile  biography_server.py  biography_server_to_be_refactored.py  main.py
servers/evolutions-server/: main.py  pyproject.toml
servers/evolutions-server/src/: main.py  test.py
servers/evolutions-server/src/connectors/: neo4j_connector.py
servers/evolutions-server/src/models/: config.py  neo4j_connector.py
servers/evolutions-server/src/tools/: __init__.py  get_pokemon_evolutions.py  get_pokemon_types.py  register.py
servers/evolutions-server/src/tools/queries/: get_pokemon_evolutions.yaml  get_pokemon_types.yaml
servers/evolutions-server/src/utils/: query_loader.py
servers/statistics-server/: main.py  pyproject.toml
servers/statistics-server/src/tools/: __init__.py  aggregate_stats_by_type.py  calculate_bst_distribution.py  calculate_stat_percentile.py  calculate_type_effectiveness.py  compare_pokemon_head_to_head.py  filter_pokemon_multi_criteria.py  find_pokemon_resistant_to_types.py  find_similar_pokemon.py  get_extreme_pokemon.py  get_pokemon_by_ability.py  get_pokemon_by_generation.py  get_pokemon_by_stat_range.py  get_pokemon_by_type_combination.py  get_resistances_and_weaknesses.py  get_top_pokemon_by_stat.py  pokemon_stats.py  register.py
servers/statistics-server/src/utils/: load_data.py  pokemon_helper.py
(+7 files in other folders)
